test/baseline/func-all.test
2012-01-01 Test all function
    Assets:Test                       $100.00
    Equity:Opening

test eval "all()" -> 1
__ERROR__
While evaluating value expression:
  all()
  ^^^^^
Error: Unknown identifier 'all'
end test
